RESOLVED FIXED146218
-webkit-clip-path clips incorrectly if the element bounds go beyond the top edge of the page
https://bugs.webkit.org/show_bug.cgi?id=146218
Summary -webkit-clip-path clips incorrectly if the element bounds go beyond the top e...
Simon Fraser (smfr)
Reported 2015-06-22 16:22:13 PDT
-webkit-clip-path clips incorrectly if the element bounds go beyond the top edge of the page
Attachments
Patch (6.37 KB, patch)
2015-06-22 16:25 PDT, Simon Fraser (smfr)
zalan: review+
Simon Fraser (smfr)
Comment 1 2015-06-22 16:25:33 PDT
Simon Fraser (smfr)
Comment 2 2015-06-22 16:34:09 PDT
Note You need to log in before you can comment on or make changes to this bug.