-webkit-clip-path clips incorrectly if the element bounds go beyond the top edge of the page https://bugs.webkit.org/show_bug.cgi?id=146218 rdar://problem/21127840

Reviewed by Zalan Bujtas.
Source/WebCore:

The clip path is computed using the RenderLayer's bounding box, so needs to be offset
by the offsetFromRenderer when set on the mask layer.

Test: compositing/masks/compositing-clip-path-origin.html

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateMaskingLayerGeometry):

LayoutTests:

Test clip path on layers with non-zero bounds offsetFromRenderer because of box shadow,
or vertical writing mode.

* compositing/masks/compositing-clip-path-origin-expected.html: Added.
* compositing/masks/compositing-clip-path-origin.html: Added.

Canonical link: https://commits.webkit.org/164291@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185851 268f45cc-cd09-0410-ab3c-d52691b4dbfc